[package]
name = "mango3-accounts"
version.workspace = true
edition.workspace = true

[dependencies]
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, optional = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true }
mango3-core = { workspace = true, features = [
    "authenticate-user",
    "confirm-confirmation-code",
    "delete-invitation-code",
    "get-invitation-code",
    "get-invitation-code-by-id",
    "insert-user",
    "insert-user-session",
    "reset-user-password",
    "send-user-login-confirmation-code",
    "send-user-password-reset-code",
], optional = true }
mango3-web-utils = { workspace = true, features = ["with-dioxus"] }

[features]
server = ["dep:tokio", "dep:mango3-core", "mango3-web-utils/server"]
web = ["mango3-web-utils/web"]
