[package]
name = "mango3-web-utils"
version.workspace = true
edition.workspace = true

[dependencies]
accept-language = { version = "3.1.0", optional = true }
axum = { workspace = true, optional = true }
axum-client-ip = { version = "0.6.1", optional = true }
chrono = { workspace = true }
codee = "0.3.0"
cookie = { version = "0.18.1", optional = true, features = ["private"] }
default-struct-builder = "0.5"
fred = { version = "10.1.0", optional = true }
futures = { workspace = true, optional = true }
http = { version = "1.3.1", optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos_i18n = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos-use = { workspace = true, features = [
    "use_clipboard",
    "use_color_mode",
    "use_infinite_scroll",
    "use_interval_fn",
] }
regex = { workspace = true, optional = true }
rust_iso3166 = { workspace = true, optional = true }
serde = { workspace = true }
server_fn = { workspace = true }
time = { version = "0.3.41", optional = true }
tower-sessions =  { version = "0.13.0", optional = true,  features = ["private"] }
tower-sessions-redis-store = { version = "0.15.0", optional = true }
tokio = { workspace = true, optional = true }
url = { workspace = true }
uuid = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
mango3-core = { workspace = true, optional = true, features = ["get-user-session-by-id", "user", "user-session"] }

[features]
default = ["current-user", "user-tag"]
# Components
current-user = ["user-presenter"]
forms = ["mutation-presenter", "leptos-use/use_textarea_autosize"]
image-upload = ["forms", "web-sys/File", "web-sys/FileList", "server_fn/multipart"]
infinite-scroll = ["cursor-page-presenter"]
markdown-editor = ["forms", "web-sys/HtmlDocument", "web-sys/HtmlTextAreaElement", "web-sys/KeyboardEvent"]
multiple-image-upload = ["image-upload"]
post-card = ["post-presenter", "user-tag"]
unconfirmed-email-alert = ["user-email-is-confirmed"]
user-card = ["user-bio-preview-html", "user-presenter"]
user-tag = ["user-presenter"]
website-card = ["website-icon", "website-presenter"]
website-icon = ["website-presenter"]
# Presenters
blob-presenter = ["mango3-core?/blob"]
cursor-page-presenter = ["mango3-core?/pagination"]
hashtag-presenter = ["mango3-core?/hashtag"]
mutation-presenter = ["mango3-core?/mutation"]
post-comment-presenter = ["mango3-core?/post-comment", "user-presenter"]
post-presenter = ["mango3-core?/post"]
user-presenter = ["mango3-core?/user", "blob-presenter", "hashtag-presenter"]
website-presenter = ["mango3-core?/website"]
# Presenter attributes
blob-is-removable = ["blob-presenter", "mango3-core?/blob-is-removable"]
post-content-html = ["post-presenter", "mango3-core?/post-content-html"]
user-bio-html = ["user-presenter", "mango3-core?/user-bio-html"]
user-bio-preview-html = ["user-presenter", "mango3-core?/user-bio-preview-html"]
user-email-is-confirmed = ["user-presenter", "mango3-core?/user-email-is-confirmed"]
website-description-html = ["website-presenter", "mango3-core?/website-description-html"]
website-storage = ["website-presenter", "mango3-core?/website-storage"]
# Misc
confirmation-codes = ["mango3-core?/confirmation-code", "mango3-core?/get-confirmation-code-by-id"]
extract-user = []
finish-and-delete-user-session = []
start-user-session = []
hydrate = ["leptos/hydrate", "leptos_i18n/hydrate"]
ssr = [
    "dep:accept-language",
    "dep:axum",
    "dep:axum-client-ip",
    "dep:cookie",
    "dep:fred",
    "dep:futures",
    "dep:http",
    "dep:leptos_axum",
    "dep:regex",
    "dep:rust_iso3166",
    "dep:time",
    "dep:tokio",
    "dep:tower-sessions",
    "dep:tower-sessions-redis-store",
    "dep:mango3-core",
    "leptos/ssr",
    "leptos_i18n/ssr",
    "leptos_meta/ssr",
    "leptos-use/axum",
    "leptos-use/ssr",
]

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "es", "pt"]
namespaces = ["accounts", "admin", "home", "my_account", "shared", "studio", "websites"]
locales-dir = "../locales"
